cmake_minimum_required(VERSION 3.18)
project(fisher)
if(POLICY CMP0146)
  cmake_policy(SET CMP0146 OLD)
endif()
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c14")
set(CUDA_VISIBLE_DEVICES 3)
find_package(CUDA REQUIRED)
set(CMAKE_CUDA_STANDARD 17)
set(CMAKE_CUDA_STANDARD_REQUIRED ON)
foreach(ComputeCapability 60 61 70 72 75 86 90)
  set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode;arch=compute_${ComputeCapability},code=sm_${ComputeCapability})
endforeach()

if (MSVC)
  set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-Xcompiler;$<$<CONFIG:Debug>:/MDd>$<$<CONFIG:Release>:/MD>)
endif()

include_directories(${CMAKE_SOURCE_DIR}/lib/include)
include_directories(${CMAKE_SOURCE_DIR}/src)
# set(FILE_IO_DIR ${CMAKE_SOURCE_DIR}/file_dir)

# link_directories(${CMAKE_SOURCE_DIR}/lib)

add_subdirectory(src)